--- a/src/User/User.API/appsettings.json
+++ b/src/User/User.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "UserContext": "server=remotemysql.com;port=3306;database=vNB3Rw2pVo;user=vNB3Rw2pVo;password=TEXnbd23EV;"
+    "UserContext": "server=remotemysql.com;port=3306;database=if1z4UoTA6;user=if1z4UoTA6;password=neHo5Ic9v0;"
   },
   "AllowedHosts": "*",
   "JWT": {
